@@ -1,3 +1,7 @@
+2011-09-05  Takuji Tanaka <KXD02663@nifty.ne.jp>
+
+	* ptexenc.c: Fix putc2() to output right unicode characters.
+
 2011-08-29  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	* unicode.c (UTF8length, UCStoUPTEX, UPTEXtoUCS),
